@@ -1,5 +1,12 @@
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (list_jar): Added local read_amt variable.
+	Use read_amt to check if the read calls returned an error
+	or didn't read the desired number of bytes. Exit if 
+	filename allocation fails. Added missing cast to ub1.
+
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (list_jar): Changed filename_len to ub2.
 
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
